--- a/src/main/resources/templates/Dashboard/index.html
+++ b/src/main/resources/templates/Dashboard/index.html
@@ -44,7 +44,7 @@
 										th:text="${request.createdAt}"></span></a></td>
 							</tr>
 							<tr>
-								<th>Content Tyoe</th>
+								<th>Content Type</th>
 								<td><span th:text="${request.contentType}"></span></td>
 							</tr>
 						</table>
