--- a/src/main/resources/templates/Home/index.html
+++ b/src/main/resources/templates/Home/index.html
@@ -33,7 +33,7 @@
             </a>
 
             <a th:href="@{/new}" class="btn btn-lg btn-primary">
-                <i class="glyphicon glyphicon-bullhorn"></i>&nbsp; Raise a Request
+                <i class="glyphicon glyphicon-bullhorn"></i>&nbsp; Raise a Review Request
             </a>
 
         </div>
