New Request code commited by Harsh Maheshwari

--- a/src/main/resources/templates/Dashboard/index.html
+++ b/src/main/resources/templates/Dashboard/index.html
@@ -40,12 +40,12 @@
 							<tr>
 								<th>Contact</th>
 								<td><a href="tel:14174444444"><span
-										th:text="${request.createdBy}"></span> <span
-										th:text="${request.createdAt}"></span></a></td>
+										th:text="${request.createdBy}"></span> 
+										</a></td>
 							</tr>
 							<tr>
 								<th>Content Type</th>
-								<td><span th:text="${request.contentType}"></span></td>
+								<td><span ></span></td>
 							</tr>
 						</table>
 					</div>
