--- a/src/main/resources/templates/topnav.html
+++ b/src/main/resources/templates/topnav.html
@@ -16,7 +16,8 @@
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a th:href="@{/dashboard}">All Requests</a></li>
+                    <li><a th:href="@{/dashboard}">Dashboard</a></li>
+                    <li><a th:href="@{/list}">All Requests</a></li>
                     <li><a th:href="@{/new}">Raise a New Request</a></li>
                 </ul>
             <!-- Top Navigation Right -->
