--- a/src/main/resources/templates/Dashboard/index.html
+++ b/src/main/resources/templates/Dashboard/index.html
@@ -38,14 +38,13 @@
 								<td><span th:text="${request.shortDescription}"></span></td>
 							</tr>
 							<tr>
-								<th>Contact</th>
-								<td><a href="tel:14174444444"><span
-										th:text="${request.createdBy}"></span> 
-										</a></td>
+								<th>Created Date</th>
+								<td><span th:text="${request.createdBy}"></span> 
+										</td>
 							</tr>
 							<tr>
 								<th>Content Type</th>
-								<td><span ></span></td>
+								<td><a><span th:text="${request.contentType}"></span></a></td>
 							</tr>
 						</table>
 					</div>
