--- a/src/main/resources/templates/Request/view.html
+++ b/src/main/resources/templates/Request/view.html
@@ -47,15 +47,16 @@
 							</tr>
 							<tr>
 								<th>Created Date</th>
-								<td><span th:text="${request.createdAt}"></span></td>
+								<td><span th:text="${request.createdBy}"></span></td>
 							</tr>
 							<tr>
 								<th>Uploaded File</th>
 		
-								<td><span th:text="${request.contentType}"></span></td>
+								<td><a><span th:text="${request.contentType}"></span></a></td>
 							</tr>
 							<tr>
 								<td><button class="btn btn-primary" onclick ="window.location='reply'">Change Status</button></td>
+								
 							</tr>
 						</table>
 					</div>
