committed by Shilpa Goel

--- a/src/main/resources/templates/Request/status.html
+++ b/src/main/resources/templates/Request/status.html
@@ -24,7 +24,7 @@
     <!-- Body -->
     <div class="container">
 		
-        <h1>Status Request</h1>
+        <h1>Request Status</h1>
 
 				<div class="col-sm-12">
 
