--- a/src/main/resources/templates/Dashboard/index.html
+++ b/src/main/resources/templates/Dashboard/index.html
@@ -22,7 +22,7 @@
     <!-- Body -->
     <div class="container">
 
-        <h1>Review Requests</h1>
+        <h1>Dashboard</h1>
 
 		<div class="row">
 			<div th:each="request : ${allRequests}">
