--- a/src/main/resources/templates/Request/listing.html
+++ b/src/main/resources/templates/Request/listing.html
@@ -68,7 +68,7 @@
                                 <label for="toDate">To Date</label>
                                 <input type="date" class="form-control" id="toDate" placeholder="Select"/>
                             </div>
-                    <div><button type="search" class="btn btn-primary col-xs-4" style="margin-top:25px">Search</button></div>
+                    <div><button type="search" class="btn btn-primary col-xs-4" style="margin-top:25px;color:#fff;">Search</button></div>
          </form>
 		</div>
 		<div class="row">
