committed by Shilpa Goel

--- a/src/main/resources/templates/Request/new.html
+++ b/src/main/resources/templates/Request/new.html
@@ -37,7 +37,7 @@ function showDiv(elem){
 	<div th:include="topnav::topnav"></div>
 	 
     <!-- Body -->
-    <div class="container" style="width:90%;background-color:grey">
+    <div class="container" style="width:90%;">
 		
         <h1>Raise a Request</h1>
 
