--- a/src/main/resources/templates/Dashboard/index.html
+++ b/src/main/resources/templates/Dashboard/index.html
@@ -43,7 +43,7 @@
 										</td>
 							</tr>
 							<tr>
-								<th>Content Type</th>
+								<th>Content Type::</th>
 								<td><a><span th:text="${request.contentType}"></span></a></td>
 							</tr>
 						</table>
