--- a/src/main/resources/templates/Request/listing.html
+++ b/src/main/resources/templates/Request/listing.html
@@ -21,20 +21,22 @@
 	<div th:include="topnav::topnav"></div> 
 
     <!-- Body -->
-    <div class="container">
+    <div class="container ">
 
         <h1>List Requests</h1>
-		<div class="row">
+        <section style = "color: #2c3e50;background-color: #ecf0f1;border-color: #ecf0f1;padding: 10px 10px 10px 10px;">
+        	
+		<div class="row" style = "padding: 10px 10px 10px 10px;"><h3>Search Criteria</h3>
 		            <form action="#">
-		            <div class="form-group col-xs-4">
+		            <div class="form-group col-xs-6">
                         <label for="requestId">Request Id</label>
                         <input type="text" class="form-control" id="requestId" placeholder="Request Id"/>
                     </div>
-		            <div class="form-group col-xs-4">
+		            <div class="form-group col-xs-6">
                         <label for="requestTitle">Request Name</label>
                         <input type="text" class="form-control" id="requestTitle" placeholder="Request Name"/>
                     </div>
-		            <div class="form-group col-xs-4">
+		            <div class="form-group col-xs-6">
                         <label for="priority">Priority</label>
 							<select class="form-control" id="priority">
                         		  <option value="select">Select</option>
@@ -43,7 +45,7 @@
 								  <option value="high">High</option>
 								  <option value="urgent">Urgent</option></select>
                     </div>
-		            <div class="form-group col-xs-4">
+		            <div class="form-group col-xs-6">
                         <label for="status">Status</label>
                         <select class="form-control" id="status">
                         		  <option value="select">Select</option>
@@ -56,27 +58,29 @@
 								  <option value="closed">Closed</option>
 								  <option value="deleted">Deleted</option></select>
                     </div>
-		            <div class="form-group col-xs-4">
-                        <label for="tags">Tags</label>
-                        <input type="text" class="form-control"  id="tags" placeholder="Tags"/>
-                    </div>
-                            <div class="form-group col-xs-4">
+                            <div class="form-group col-xs-6">
                                 <label for="fromDate">From Date</label>
                                 <input type="date" class="form-control" id="fromDate" placeholder="Select"/>
                             </div>
-                            <div class="form-group col-xs-4">
+                            <div class="form-group col-xs-6">
                                 <label for="toDate">To Date</label>
                                 <input type="date" class="form-control" id="toDate" placeholder="Select"/>
                             </div>
-                    <div><button type="search" class="btn btn-primary col-xs-4" style="margin-top:25px;color:#fff;">Search</button></div>
+		            <div class="form-group col-xs-6">
+                        <label for="tags">Tags</label>
+                        <input type="text" class="form-control"  id="tags" placeholder="Tags"/>
+                    </div>
+                   <div class="form-group">
+                   <button class="btn btn-primary" style="margin-top:25px;;margin-left:17px">Search</button></div>
          </form>
 		</div>
-		<div class="row">
-			<div th:each="request : ${allRequests}">
-				<div class="col-sm-4">
+		<div class = "row" style = "padding: 10px 10px 10px 10px;">
+		<h3>Result List</h3>
+			<div th:each="request : ${allRequests}" >
+				<div class="col-sm-4" style = "background-color: #ecf0f1;height: auto;padding: 10px 15px;border: 5px solid  #ecf0f1;">
 
-					<div class="panel panel-default">
-						<div class="panel-heading">
+					<div class="panel panel-default" style = "padding:5px 5px;">
+						<div class="">
 							Request <span th:text="${request.requestId}"></span>
 						</div>
 						<table class="table">
@@ -101,8 +105,8 @@
 				</div>
 
 			</div>
-		</div>
-
+			</div>
+	</section>
 	</div>
 
     <!-- JavaScript -->
