--- a/src/main/resources/templates/Request/new.html
+++ b/src/main/resources/templates/Request/new.html
@@ -98,7 +98,11 @@ function showDiv(elem){
        	   return true;
        	 }
      
-      
+       function  checkData(){debugger;
+    	   alert("welcome to submit function");
+    	   var x = document.getElementsByName('createRequestForm');
+    	   x[0].submit();
+       }
   
 
      
@@ -116,7 +120,7 @@ function showDiv(elem){
 
         <div class="row">
 
-            <form action="#" th:action="@{/new}" th:object="${request}"  method="post" enctype="multipart/form-data">
+            <form name="createRequestForm" action="#" th:action="@{/new}" th:object="${request}"  method="post" enctype="multipart/form-data">
 
                 <!-- Left Column -->
                 <div class="col-xs-12">
@@ -202,12 +206,7 @@ function showDiv(elem){
                      
                     <div class="row">
 
-                       <div class="">
-                            <div class="form-group" style="display:none">
-                                <label for="createdAt">Created At</label>
-                                <input style="border:1px solid black" type="date" class="form-control" th:field="*{createdAt}" id="createdAt" placeholder="Enter Date here (dd/MM/yyyy)"/>
-                            </div>
-                        </div>
+                       
                        
                        
                         <div class="col-xs-6">
@@ -219,7 +218,7 @@ function showDiv(elem){
                        
                     </div>
 
-                    <button type="submit" class="btn btn-primary" style="border:1px solid black;width:100px;color:black;margin-bottom:20px">Submit</button>
+                    <button type="button" class="btn btn-primary" style="border:1px solid black;width:100px;color:black;margin-bottom:20px" onClick = "checkData()">Submit</button>
                     <button type="reset" class="btn btn-danger" value="Reset" onClick="window.location.reload()" style="background-color:white;border:1px solid black;width:100px;color:black;margin-left:80px;margin-bottom:20px">Cancel</button>
 
                 </div>
