--- a/src/main/resources/templates/Request/listing.html
+++ b/src/main/resources/templates/Request/listing.html
@@ -15,6 +15,87 @@
     <link rel="stylesheet" href="//ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.css"/>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css"/>
     <link rel="stylesheet" href="../css/main.css"/>
+	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<!--  	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>-->
+	
+	
+	<!-- <script type="text/javascript">
+		$(function () {
+			debugger;
+		    $("#fromDate").datepicker({
+		        numberOfMonths: 2,
+		        onSelect: function (selected) {debugger;
+		            var dt = new Date(selected);
+		            dt.setDate(dt.getDate() + 1);
+		            $("#toDate").datepicker("option", "minDate", dt);
+		        }
+		    });
+		    
+		    $("#toDate").datepicker({
+		        numberOfMonths: 2,
+		        onSelect: function (selected) {debugger;
+		            var dt = new Date(selected);
+		            dt.setDate(dt.getDate() - 1);
+		            $("#fromDate").datepicker("option", "maxDate", dt);
+		        }
+		    });
+		});
+	</script> -->
+
+<script>
+//<![CDATA[
+window.onload = function() {
+	 
+	  
+	  $("#toDate").on('change', function() {
+		    var startDate = document.getElementById("fromDate").value;
+		    var endDate = document.getElementById("toDate").value;
+
+		    if ((Date.parse(endDate) <= Date.parse(startDate))) {
+		    	document.getElementById('fromDate').value ='';
+		    	alert("End date should be greater than Start date");
+		      document.getElementById("toDate").value = "";
+		    }
+		  });
+	}
+	
+$(function(){
+	 
+	$('#requestId').keyup(function()
+	{
+		var yourInput = $(this).val();
+		re = /[`~!@#$%^&*()_|+\-=?;:'",.<>\{\}\[\]\\\/]/gi;
+		var isSplChar = re.test(yourInput);
+		if(isSplChar)
+		{
+			var no_spl_char = yourInput.replace(/[`~!@#$%^&*()_|+\-=?;:'",.<>\{\}\[\]\\\/]/gi, '');
+			alert("special character is not allowed");
+			$(this).val('');
+		}
+	});
+ 
+});
+	
+$(function(){
+	 
+	$('#requestTitle').keyup(function()
+	{
+		var yourInput = $(this).val();
+		re = /[`~!@#$%^&*()_|+\-=?;:'",.<>\{\}\[\]\\\/]/gi;
+		var isSplChar = re.test(yourInput);
+		if(isSplChar)
+		{
+			var no_spl_char = yourInput.replace(/[`~!@#$%^&*()_|+\-=?;:'",.<>\{\}\[\]\\\/]/gi, '');
+			alert("special character is not allowed");
+			$(this).val('');
+		}
+	});
+ 
+});
+	
+//]]>
+</script>
+
 </head>
 
 <body>
@@ -109,9 +190,6 @@
 	</section>
 	</div>
 
-    <!-- JavaScript -->
-    <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.4.js"></script>
-    <script src="//ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/bootstrap.js"></script>
 
 </body>
 
