--- a/src/main/resources/templates/Request/new.html
+++ b/src/main/resources/templates/Request/new.html
@@ -98,10 +98,9 @@ function showDiv(elem){
        	   return true;
        	 }
      
-       function  checkData(){debugger;
+       function  submitForm(){
     	   alert("welcome to submit function");
-    	   var x = document.getElementsByName('createRequestForm');
-    	   x[0].submit();
+    	   $('#createRequestForm').submit();
        }
   
 
@@ -120,14 +119,14 @@ function showDiv(elem){
 
         <div class="row">
 
-            <form name="createRequestForm" action="#" th:action="@{/new}" th:object="${request}"  method="post" enctype="multipart/form-data">
+            <form id="createRequestForm" action="/submitRequest" th:object="${request}"  method="post" enctype="multipart/form-data">
 
                 <!-- Left Column -->
                 <div class="col-xs-12">
 
                     <div class="form-group col-xs-6">
                         <label for="requestTitle">Request Title (Max 250 Characters)</label>
-                        <input style="border: 1px solid black" type="text" class="form-control" th:field="*{requestTitle}" id="requestTitle" placeholder="Enter your request title" onkeypress="return IsAlphaNumeric(event)" />
+                        <input style="border: 1px solid black" type="text" class="form-control" th:field="*{requestTitle}" id="requestTitle" name = "requestTitle" placeholder="Enter your request title" onkeypress="return IsAlphaNumeric(event)" />
                     </div>
                    
                    <div class="form-group col-xs-6">
@@ -218,7 +217,7 @@ function showDiv(elem){
                        
                     </div>
 
-                    <button type="button" class="btn btn-primary" style="border:1px solid black;width:100px;color:black;margin-bottom:20px" onClick = "checkData()">Submit</button>
+                    <button type="button" class="btn btn-primary" style="border:1px solid black;width:100px;color:black;margin-bottom:20px" onClick = "submitForm()">Submit</button>
                     <button type="reset" class="btn btn-danger" value="Reset" onClick="window.location.reload()" style="background-color:white;border:1px solid black;width:100px;color:black;margin-left:80px;margin-bottom:20px">Cancel</button>
 
                 </div>
